Smooth delete of msg card

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </main>
   <div id="overlay"></div>
   <div class="error-msg" role="alert" aria-relevant="all"></div>
-  <script src=" js/main.js"> </script>
+  <script src=" js/main.min.js"> </script>
 </body>
 
 </html>
